Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27331

NULL pointer passed to wglCreatePbufferARB() causes crash w/ Mesa

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.4
    • 4.8.2
    • GUI: OpenGL
    • None
    • Windows 7 x64
    • 4d4cc4dc14993a533b032acae8862deeb9d695d2

    Description

      When a pbuffer is created, in some cases a NULL pointer is passed to wglCreatePbufferARB() for the attribute list.
      This code path is hit when Mesa, or a Mesa-based OpenGL implementation - notably the VMware accelerated OpenGL - is used. Unfortunately, Mesa doesn't check whether the attribute list is a NULL pointer and crashes.
      The WGL_ARB_pbuffer spec doesn't explicitly allow or disallow NULL pointers; however, the safe approach would be to pass a valid pointer to an empty list instead of simply using NULL. The attached patch does just that.

      Attachments

        For Gerrit Dashboard: QTBUG-27331
        # Subject Branch Project Status CR V

        Activity

          People

            rodal Samuel Rødal
            frank_richter Frank Richter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes