Fixed potential crash in wglCreatePbufferARB() on Windows.

The spec doesn't allow for the piAttribList parameter to be 0.

Task-number: QTBUG-27331
Change-Id: I75da84789cf8044e9283bbab29b6435b0d352f22
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>